# objectlua

./: CMakeLists.txt  Makefile  WhatsNew.txt  dist.info  template.rockspec
share/objectlua/test/: SomeClass.lua  TestObjectLua.lua  TestPrototype.lua
src/objectlua/: Class.lua
test/: TestObject.lua  TestObjectImplementation.lua
